# core

./: .gitignore  meson.build
include/cern/core/: cloneable.h  exports.h
include/cern/core/windows/: handle.h
scripts/cross-files/: x86_64-MinGW.txt
src/: cloneable.c
src/windows/: handle.c
